# laboratory-Works

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt
libs/algorithms/array/: array.c  array.h
libs/algorithms/sorting/: bubble_sort.c  bubble_sort.h  comb_sort.c  comb_sort.h  insertion_sort.c  insertion_sort.h  radix_sort.c  radix_sort.h  selection_sort.c  selection_sort.h  shell_sort.c  shell_sort.h  sort.c  sort.h  sort_n_comp.c  sort_n_comp.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/string/: CMakeLists.txt  string_.c  string_.h
libs/data_structures/string/tasks/: DigitToEndReverse.c  DigitToEndReverse.h  additionOfSmallerString.c  additionOfSmallerString.h  deleteIsPalindromeWord.c  deleteIsPalindromeWord.h  deleteWordisEqualLast.c  deleteWordisEqualLast.h  digitToStart.c  digitToStart.h  digitToStartNotReverse.c  digitToStartNotReverse.h  digitsToEndReverse.c  digitsToEndReverse.h  getCountPalindom.c  getCountPalindom.h  lastWordFIrstStringInSecondString.c  lastWordFIrstStringInSecondString.h  lexicographicOrderingWord.c  lexicographicOrderingWord.h  mixedStringFromTwo.c  mixedStringFromTwo.h  pairWordsFromEqualLetter.c  pairWordsFromEqualLetter.h  precindFirstOccurence.c  precindFirstOccurence.h  printWordReverse.c  printWordReverse.h  removeAdjacentEqualLetters.c  removeAdjacentEqualLetters.h  removeExtraSpaces.c  removeExtraSpaces.h  removeNonLetters.c  removeNonLetters.h  replaceDigitsWithSpaces.c  replaceDigitsWithSpaces.h  replaceWord.c  replaceWord.h  reverseString.c  reverseString.h  (+10 more)
libs/sorting_complexity/: CMakeLists.txt  sorting_complexity.c  sorting_complexity.h
libs/sorting_complexity/generators/: generators.c  generators.h
