add_library(data_structures
        string/string_.c string/tasks/removeNonLetters.c string/tasks/removeNonLetters.h string/tasks/removeExtraSpaces.c string/tasks/removeExtraSpaces.h string/tasks/digitToStart.c string/tasks/digitToStart.h string/tasks/removeAdjacentEqualLetters.c string/tasks/removeAdjacentEqualLetters.h)
target_link_libraries(data_structures)