add_library(string
        string_.c
        tasks/removeNonLetters.c
        tasks/removeAdjacentEqualLetters.c
        tasks/removeExtraSpaces.c
        tasks/digitToStart.c
        tasks/getCountPalindom.c
        tasks/digitsToEndReverse.c
        tasks/replaceDigitsWithSpaces.c
        tasks/replaceWord.c
        tasks/reverseString.c
        tasks/lexicographicOrderingWord.c
        tasks/printWordReverse.c
        tasks/test_task.c tasks/wordsAreUnique.c tasks/wordsAreUnique.h)