add_library(string
        string_.c
        tasks/removeNonLetters.c
        tasks/removeAdjacentEqualLetters.c
        tasks/removeExtraSpaces.c
        tasks/digitToStart.c
        tasks/getCountPalindom.c
        tasks/digitsToEndReverse.c
        tasks/replaceDigitsWithSpaces.c
        tasks/replaceWord.c
        tasks/reverseString.c
        tasks/lexicographicOrderingWord.c
        tasks/printWordReverse.c
        tasks/wordsAreUnique.c
        tasks/wordBeforeFirstWordWithA.c
        tasks/lastWordFIrstStringInSecondString.c
        tasks/mixedStringFromTwo.c
        tasks/wordsDifferenceLastWord.c
        tasks/pairWordsFromEqualLetter.c
        tasks/deleteIsPalindromeWord.c
        tasks/test_task.c)